# constitutional-runtime

./: .gitignore  Cargo.toml  README.md
docs/: constitutional-runtime.md  ir-and-lowering.md  minilab-architecture.md
src/: capability.rs  decision.rs  evidence.rs  evidence_sqlite.rs  evidence_supabase.rs  ingress.rs  ir.rs  lib.rs  lowering.rs  policy.rs  refs.rs  validation.rs
tests/: constitutional_pipeline.rs
